# rencpp

./: CMakeLists.txt  README.md
qml/: ChoiceButton.qml  GameScreen.qml  StoryView.qml  main.qml
resources/: qml.qrc  stories.qrc
resources/stories/: sample_story.json  story.json  story_part1.json  story_part2.json
src/: choice.cpp  choice.h  gameengine.cpp  gameengine.h  main.cpp  mainwindow.cpp  mainwindow.h  storyloader.cpp  storyloader.h  storynode.cpp  storynode.h
